# ol

./: Dockerfile  README.md  environment.yml  generate_thumbnails.py  model.py  oceanlens_inference.py  pyproject.toml  run_oceanlens_inference.py  s3_upload.py  slurm_infer_v5_fm_debug_ecmwf.sh  slurm_train_v4_fm_lir.sh
configs/: base.yaml  base.yaml.before_numworkers
configs/variants/: ablation.yaml  v1.yaml  v2.yaml  v2_loggrad.yaml  v3.yaml  v4.yaml  v4_s0_base.yaml  v4_s1_logit_t.yaml  v4_s1_logit_t_cfg_ft.yaml  v4_s1_logit_t_mu_mask_regional.yaml  v4_s1_logit_t_recoarsen.yaml  v4_s1_logit_t_recoarsen_ft.yaml  v4_s1_logit_t_regional_ft.yaml  v4_s2_independent.yaml  v4_s3_no_attn.yaml  v4_s4_grad_mu.yaml  v5.yaml  v5_fm_only.yaml  v6_full_geo_phys.yaml  v7a_swin_geo_edm_light.yaml  v8a_dit_pixel.yaml  v9a_songunet_edm.yaml  v9b_songunet_bridge.yaml  v9c_dit_cfg_recoarsen.yaml
docs/: lir_results_review.md  state_of_art_fm_downscaling.md
model_core/: __init__.py  utils.py
model_core/models/: cno.py  variants.py
notebooks/: analyze_v3_outputs.ipynb
presentations/v4_experiments_beamer/: oceanlens_v4_experiments.aux  oceanlens_v4_experiments.tex
results/v3_minimal_day_index_0/: metadata.json  (+1 more)
scripts/: infer_ablation_minimal.py  infer_v3_minimal.py  infer_v5_monthly_single_day.py  plot_all_residuals.py  plot_thetao_residuals.py  plot_thetao_residuals_summary.py  train.py  validate.py
website/: PLOT_REQUIREMENTS.md  _quarto.yml  build-website.sh  cno.qmd  compare.qmd  flow-matching.qmd  index.qmd  methods.qmd  styles.css  theme-dark.scss  theme-light.scss
(+179 files in other folders)
